--- a/introduction.tex
+++ b/introduction.tex
@@ -41,12 +41,10 @@ In this thesis, we use the following notations:
 	\item source and target Corpora $\mathcal{F}, \mathcal{E}$
 	\item $P(e_1^I | e_1^J)$ and ${P(f_1^J |f_1^I)}$ for denoising autoencoder
 	\item $P(e_1^I | f_1^J)$ and ${P(f_1^J |e_1^I)}$ for translation model
-	\item $\bm{s}$ and $\bm{s}_i$ for hidden states of RNN encoder
-	\item $\bm{h}$ and $\bm{h}_i$ for hidden states of RNN decoder
-	\item $\bm{c}$ and $\bm{c}_i$ for context vectors
-	\item $\bm{\alpha}_i(j)$: the alignment between the $i$-th decoder sate and $j$-th encoder state
-	\item $\tilde{\bm{h}}_i$:  attentional hidden state
-	hidden state
+	\item $s$ and $s_i$  internal states of RNN decoder
+	\item $h$ and $h_i$ internal states of RNN encoder 
+	\item $c$ and $c_i$ for context vectors
+	\item $\alpha$: the alignment 
 \end{itemize}
 
 
