--- a/references.bib
+++ b/references.bib
@@ -284,10 +284,48 @@
 	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{bahdanau2014neural,
+	title={Neural machine translation by jointly learning to align and translate},
+	author={Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+	journal={arXiv preprint arXiv:1409.0473},
+	year={2014}
+}
+
 
 @book{koehn2009statistical,
 	title={Statistical machine translation},
 	author={Koehn, Philipp},
 	year={2009},
 	publisher={Cambridge University Press}
+}
+
+@inproceedings{sutskever2014sequence,
+	title={Sequence to sequence learning with neural networks},
+	author={Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V},
+	booktitle={Advances in neural information processing systems},
+	pages={3104--3112},
+	year={2014}
+}
+
+@inproceedings{gouws2015bilbowa,
+	title={Bilbowa: Fast bilingual distributed representations without word alignments},
+	author={Gouws, Stephan and Bengio, Yoshua and Corrado, Greg},
+	booktitle={International Conference on Machine Learning},
+	pages={748--756},
+	year={2015}
+}
+
+@inproceedings{luong2015bilingual,
+	title={Bilingual word representations with monolingual quality in mind},
+	author={Luong, Thang and Pham, Hieu and Manning, Christopher D},
+	booktitle={Proceedings of the 1st Workshop on Vector Space Modeling for Natural Language Processing},
+	pages={151--159},
+	year={2015}
+}
+
+@article{coulmance2016trans,
+	title={Trans-gram, fast cross-lingual word-embeddings},
+	author={Coulmance, Jocelyn and Marty, Jean-Marc and Wenzek, Guillaume and Benhalloum, Amine},
+	journal={arXiv preprint arXiv:1601.02502},
+	year={2016}
 }
